@@ -1,0 +1,2 @@
+[diazotest]
+theme =
