@@ -1,0 +1,11 @@
+<rules
+    xmlns="http://namespaces.plone.org/diazo"
+    xmlns:css="http://namespaces.plone.org/diazo/css"
+    xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
+    >
+
+    <drop css:content="#one" />
+
+    <replace css:content="#two"><xsl:apply-templates css:prefix="//" css:select="#one" mode="raw"/></replace>
+
+</rules>
